# X4Native

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  EXTENSION_GUIDE.md  INTERNALS.md  RELEASE.md  SDK_CONTRACT.md
docs/rev/: COMPONENT_SYSTEM.md  EXTENSION_SETTINGS_UI.md  FACTION_RELATIONS.md  GAME_LOOP.md  GATES_AND_POSITIONS.md  STATE_MUTATION.md  SUBSYSTEMS.md  THREADING.md  VISIBILITY.md  WALKABLE_INTERIORS.md
examples/class_dump/: class_dump.cpp  x4native.json
examples/entity_inspector/: entity_inspector.cpp  x4native.json
examples/event_probe/: event_probe.cpp  x4native.json
examples/event_test/: event_test.cpp  x4native.json
examples/hello/: hello.cpp  x4native.json
examples/hook_test/: hook_test.cpp  x4native.json
examples/lua_bridge/: lua_bridge.cpp  x4native.json
examples/native_tick/: native_tick.cpp  x4native.json
extension/: content.xml  content.xml.in  ui.xml
extension/md/: x4native_main.xml
extension/ui/: x4n_settings_menu.lua  x4native.lua
native/version_db/: func_history.json  internal_functions.json  type_changes.json
reference/: class_ids.csv  class_matrix.csv  event_layouts.csv  event_type_ids.csv  x4_exports.txt  x4_ffi_raw.txt  x4_ffi_summary.txt  x4_struct_names.txt
scripts/: README.md  extract_game_files.ps1  generate_game_data.ps1  generate_headers.ps1  generate_version_db.ps1  update_references.ps1
sdk/: x4_game_class_ids.inc  x4_game_func_list.inc  x4_game_func_table.h  x4_game_offsets.h  x4_game_types.h  x4_internal_func_list.inc  x4_manual_types.h  x4_md_events.h  x4n_buildprocessor.h  x4n_container.h  x4n_core.h  x4n_entity.h  x4n_events.h  x4n_faction.h  x4n_hooks.h  x4n_log.h  x4n_math.h  x4n_memory.h  x4n_module.h  x4n_plans.h  x4n_resources.h  x4n_rooms.h  x4n_sector.h  x4n_settings.h  x4n_ship.h  x4n_stash.h  x4n_station.h  x4n_visibility.h  x4native.h  x4native_extension.h
src/: CMakeLists.txt
src/common/: Common.h  lua_api.cpp  lua_api.h  x4native_defs.h
src/core/: core.cpp  event_system.cpp  event_system.h  extension_manager.cpp  extension_manager.h  game_api.cpp  game_api.h  hook_manager.cpp  hook_manager.h  logger.cpp  logger.h  settings_manager.cpp  settings_manager.h  version.cpp  version.h
src/proxy/: proxy.cpp
